[gd_scene load_steps=2 format=3 uid="uid://hud_scene"]

[ext_resource type="Script" path="res://scripts/HUD.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 150.0
offset_bottom = 90.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HPLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "HP: 30/30"

[node name="LevelLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Level: 1"

[node name="KeysLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Keys: 0"

[node name="SwordLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Sword: Level 1"
